feat: add product onboarding skeleton
